slight ui changes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Interactive Portal - Choose Your Destination</title>
+    <title>AgroField</title>
     <meta name="description" content="Interactive web portal with dynamic content and modern design" />
-    <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="Interactive Portal - Choose Your Destination" />
     <meta property="og:description" content="Interactive web portal with dynamic content and modern design" />
