--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AgroField</title>
+    <title>אורולומטי</title>
     <meta name="description" content="Interactive web portal with dynamic content and modern design" />
-
+    <link rel="icon" type="image/png" href="/leaf.png" />
     <meta property="og:title" content="Interactive Portal - Choose Your Destination" />
     <meta property="og:description" content="Interactive web portal with dynamic content and modern design" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/leaf.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="s" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:image" content="/leaf.png" />
   </head>
 
   <body>
